--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,24 +1,244 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>858</width>
+    <height>628</height>
    </rect>
   </property>
-  <property name="windowTitle" >
-   <string>MainWindow</string>
+  <property name="font">
+   <font>
+    <family>Calibri Light</family>
+    <pointsize>12</pointsize>
+   </font>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <property name="windowTitle">
+   <string>Анализ распределения объектов на изображении</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>:/icons/favicon.ico</normaloff>:/icons/favicon.ico</iconset>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowNestedDocks|QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
+  </property>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>Tab 1</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>Tab 2</string>
+       </attribute>
+      </widget>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>858</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Файл</string>
+    </property>
+    <addaction name="open_image_ac"/>
+    <addaction name="open_dataFile_act"/>
+    <addaction name="separator"/>
+    <addaction name="close_dataFile_act"/>
+    <addaction name="close_all_act"/>
+    <addaction name="separator"/>
+    <addaction name="save_separtion_act"/>
+    <addaction name="save_image_as"/>
+   </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>Фильтры</string>
+    </property>
+    <addaction name="create_filter_act"/>
+    <addaction name="separator"/>
+    <addaction name="add_param_act"/>
+    <addaction name="change_param_act"/>
+    <addaction name="delete_param_act"/>
+    <addaction name="separator"/>
+    <addaction name="apply_filter_changed_act"/>
+    <addaction name="save_filter_act"/>
+    <addaction name="separator"/>
+    <addaction name="rename_filter_act"/>
+    <addaction name="remove_filter_act"/>
+    <addaction name="change_filter_color_act"/>
+   </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>Группы</string>
+    </property>
+    <addaction name="view_groups_objects_act"/>
+    <addaction name="delete_groups_objects_act"/>
+    <addaction name="exchange_groups_objects_act"/>
+    <addaction name="save_groups_act"/>
+   </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>Программа</string>
+    </property>
+    <addaction name="about_program_act"/>
+    <addaction name="settings_act"/>
+    <addaction name="restart_act"/>
+    <addaction name="exit_act"/>
+   </widget>
+   <addaction name="menu"/>
+   <addaction name="menu_2"/>
+   <addaction name="menu_3"/>
+   <addaction name="menu_4"/>
+  </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="open_dataFile_act"/>
+  </widget>
+  <action name="open_image_ac">
+   <property name="text">
+    <string>Открыть изображение</string>
+   </property>
+  </action>
+  <action name="open_dataFile_act">
+   <property name="text">
+    <string>Открыть файл данных</string>
+   </property>
+  </action>
+  <action name="close_dataFile_act">
+   <property name="text">
+    <string>Закрыть файл данных</string>
+   </property>
+  </action>
+  <action name="close_all_act">
+   <property name="text">
+    <string>Закрыть все</string>
+   </property>
+  </action>
+  <action name="save_groups_act">
+   <property name="text">
+    <string>Сохранить группы</string>
+   </property>
+  </action>
+  <action name="save_separtion_act">
+   <property name="text">
+    <string>Сохранить распределение</string>
+   </property>
+  </action>
+  <action name="save_image_as">
+   <property name="text">
+    <string>Сохранить изображение ка...</string>
+   </property>
+  </action>
+  <action name="create_filter_act">
+   <property name="text">
+    <string>Создать новый фильтр</string>
+   </property>
+  </action>
+  <action name="add_param_act">
+   <property name="text">
+    <string>Добавить параметр</string>
+   </property>
+  </action>
+  <action name="change_param_act">
+   <property name="text">
+    <string>Изменить параметр</string>
+   </property>
+  </action>
+  <action name="delete_param_act">
+   <property name="text">
+    <string>Удалить параметр</string>
+   </property>
+  </action>
+  <action name="apply_filter_changed_act">
+   <property name="text">
+    <string>Применить изменения</string>
+   </property>
+  </action>
+  <action name="save_filter_act">
+   <property name="text">
+    <string>Сохранить</string>
+   </property>
+  </action>
+  <action name="rename_filter_act">
+   <property name="text">
+    <string>Переименовать</string>
+   </property>
+  </action>
+  <action name="remove_filter_act">
+   <property name="text">
+    <string>Удалить</string>
+   </property>
+  </action>
+  <action name="view_groups_objects_act">
+   <property name="text">
+    <string>Просмотр объектов</string>
+   </property>
+  </action>
+  <action name="change_filter_color_act">
+   <property name="text">
+    <string>Поменять цвет</string>
+   </property>
+  </action>
+  <action name="delete_groups_objects_act">
+   <property name="text">
+    <string>Удалить</string>
+   </property>
+  </action>
+  <action name="exchange_groups_objects_act">
+   <property name="text">
+    <string>Обмен</string>
+   </property>
+  </action>
+  <action name="about_program_act">
+   <property name="text">
+    <string>О программе</string>
+   </property>
+  </action>
+  <action name="settings_act">
+   <property name="text">
+    <string>Настройки</string>
+   </property>
+  </action>
+  <action name="restart_act">
+   <property name="text">
+    <string>Перезапуск</string>
+   </property>
+  </action>
+  <action name="exit_act">
+   <property name="text">
+    <string>Выход</string>
+   </property>
+  </action>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
